<resources>
    <string name="app_name">NYT Search</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="headline">Headline</string>
    <string name="title_activity_article">Article</string>
    <string name="action_filter">filter list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arts">Arts</string>
    <string name="begin_date">Begin Date</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="sort_order">Sort Order</string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
</resources>
